--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CS161"]
 	path = CS161
 	url = git@github.com:jland13/CS161.git
+[submodule "CS162"]
+	path = CS162
+	url = git@github.com:jland13/CS162
