--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "CS162"]
 	path = CS162
 	url = git@github.com:jland13/CS162
+[submodule "CS201"]
+	path = CS201
+	url = git@github.com:jland13/CS201
