--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "CS260"]
 	path = CS260
 	url = git@github.com:jland13/CS260
+[submodule "CS261"]
+	path = CS261
+	url = git@github.com:jland13/CS261
